<resources>
    <string name="app_name">"My "</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="action_favourite">str</string>
    <string name="title_activity_new_">New_Activity</string>
    <string name="title_activity_">Activity</string>
    <string name="menu_title">Clear Search History</string>
    <string name="menu_title2">option2</string>
    <string name="menu_search">Search</string>
    <string name="title_activity_search_results_activiyt">SearchResultsActiviyt</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="my_tb_title">INBOX</string>
    <string name="searchable">Searchable</string>
    <string name="action_search">sear</string>
    <string name="hint">view</string>
    <string name="title_activity_notification_view">NotificationView</string>
    <string name="title_activity_googledrive">GOOGLEDRIVE</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_list">List</string>
    <string name="msg">message</string>
    <string name="use">uploadcreate</string>


</resources>
