<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu1"
        android:title="@string/menu_title"
        android:icon="@drawable/ic_action_name4"

        />

    <item android:id="@+id/menu2"
        android:title="@string/menu_title2" />


    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_name"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

  <item android:id="@+id/compose"
      android:title="@string/msg"
      android:icon="@drawable/ic_action_name7"
      app:showAsAction="always|collapseActionView" />
    <item android:id="@+id/drive"
        android:title="@string/use"
        android:icon="@drawable/ic_action_name9"
        app:showAsAction="always|collapseActionView" />







</menu>